objects/NH_Community__c.object
<CustomObject>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract_Number__c</fullName>
        <label>Tract Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Release__c</fullName>
        <label>Type of Release</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Plot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Pre-Plot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <label>Utility</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>NH Community</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Community_Adder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Community Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NH Communities</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Project_Team_Member__c</fullName>
        <label>Project Team Member</label>
    </sharingReasons>
</CustomObject>